--- a/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.html
+++ b/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.html
@@ -7,7 +7,7 @@
       <button mat-button id="list-sessions-btn" (click)="fetchActiveSessions()">Fetch all</button>
       <button mat-button id="close-session-btn" (click)="closeSession()">Close this session</button>
     </div>
-    <mat-form-field class="inner-text-input">
+    <mat-form-field class="inner-text-input" [style.fontSize.px]=14>
       <input matInput id="resource-id-field" placeholder="resourceId" [(ngModel)]="resourceId">
     </mat-form-field>
     <div>
@@ -26,10 +26,10 @@
     </button>
     <div *ngIf="showRecProperties" id="rec-properties-div">
       <div>
-        <mat-form-field class="inner-text-input">
+        <mat-form-field class="inner-text-input" [style.fontSize.px]=14>
           <input matInput id="recording-name-field" placeholder="Recording name" [(ngModel)]="recordingProperties.name">
         </mat-form-field>
-        <mat-form-field class="inner-text-input">
+        <mat-form-field class="inner-text-input" [style.fontSize.px]=14>
           <mat-select id="rec-outputmode-select" placeholder="Output mode" [(ngModel)]="recordingProperties.outputMode">
             <mat-option *ngFor="let enumerator of enumToArray(recMode)" [value]="enumerator">
               <span [attr.id]="'option-' + enumerator">{{ enumerator }}</span>
@@ -38,14 +38,15 @@
         </mat-form-field>
       </div>
       <div *ngIf="recordingProperties.outputMode.toString() === recMode[recMode.COMPOSED]" id="rec-layout-div">
-        <mat-form-field class="inner-text-input">
+        <mat-form-field class="inner-text-input" [style.fontSize.px]=14>
           <mat-select placeholder="Recording layout" [(ngModel)]="recordingProperties.recordingLayout">
             <mat-option *ngFor="let enumerator of enumToArray(recLayouts)" [value]="enumerator">
               {{ enumerator }}
             </mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-form-field *ngIf="recordingProperties.recordingLayout.toString() === recLayouts[recLayouts.CUSTOM]" class="inner-text-input">
+        <mat-form-field *ngIf="recordingProperties.recordingLayout.toString() === recLayouts[recLayouts.CUSTOM]" class="inner-text-input"
+          [style.fontSize.px]=14>
           <input matInput placeholder="Custom layout" type="text" [(ngModel)]="recordingProperties.customLayout">
         </mat-form-field>
       </div>
@@ -53,12 +54,12 @@
         <mat-checkbox [(ngModel)]="recordingProperties.hasAudio">Has audio</mat-checkbox>
         <mat-checkbox [(ngModel)]="recordingProperties.hasVideo">Has video</mat-checkbox>
         <mat-form-field *ngIf="recordingProperties.outputMode.toString() === recMode[recMode.COMPOSED]" id="recording-resolution-form"
-          class="inner-text-input">
+          class="inner-text-input" [style.fontSize.px]=14>
           <input matInput id="recording-resolution-field" placeholder="Resolution" type="text" [(ngModel)]="recordingProperties.resolution">
         </mat-form-field>
       </div>
     </div>
-    <mat-form-field class="inner-text-input">
+    <mat-form-field class="inner-text-input" [style.fontSize.px]=14>
       <input matInput id="recording-id-field" placeholder="recordingId" [(ngModel)]="recordingId">
     </mat-form-field>
     <div>
